--- a/NQueen/NQueen/NQueen.csproj
+++ b/NQueen/NQueen/NQueen.csproj
@@ -44,6 +44,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queen.cs" />
+    <Compile Include="Queen2.cs" />
+    <Compile Include="Queen3.cs" />
+    <Compile Include="Queen4.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
